# map_benchmark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  all.txt
data/: 2023-04.txt  InsertHugeInt_O3_march-native.txt  RandomFind_O3.txt  all_locked.txt  all_new.txt  ankerl.txt  rest.txt  (+3 more)
src/: CMakeLists.txt
src/app/: MallocHook.cpp  MallocHook.h  MapHash.h  PeriodicMemoryStats.h  RandomBool.h  XoRoShiRo128Plus.h  api2.cpp  bench.h  getRSS.cpp  getRSS.h  hashes.cpp  hashes.h  hex.h  main.cpp  mixer.h  pool.h  profiler.h  sfc64.h  shuffle.h
src/benchmarks/: AccidentallyQuadratic.cpp  Copy.cpp  CtorDtor.cpp  GameOfLife.cpp  Insert.cpp  Internal.cpp  Iterate.cpp  RandomDistinct.cpp  RandomFind.cpp  RandomFindExisting.cpp  RandomFindNonexisting.cpp  RandomFindString.cpp  RandomInsertErase.cpp  RandomInsertEraseStrings.cpp  ShowHash.cpp  Strings.cpp  knucleotide.cpp
src/greg_benchmarks/: Insert.cpp  Lookup.cpp
src/hashes/CityHash/: Hash.cpp  Hash.h
src/hashes/FNV1a/: Hash.h
src/hashes/IdentityHash/: Hash.h
src/hashes/NullHash/: Hash.h
src/hashes/absl_Hash/: Hash.h  dependencies.cmake
src/hashes/ankerl_hash/: Hash.h
src/hashes/boost_hash/: Hash.h  dependencies.cmake
src/hashes/folly_F14DefaultHasher/: Hash.h
src/hashes/folly_hasher/: Hash.h
src/hashes/komihash/: Hash.h
src/hashes/lehmer_hash/: Hash.h
src/hashes/mulxp0/: Hash.h
src/hashes/mulxp1/: Hash.h
src/hashes/mulxp2/: Hash.h
src/hashes/mulxp3/: Hash.h
src/hashes/mumx_hash/: Hash.h
src/hashes/mumxmumxx1_hash/: Hash.h
src/hashes/robin_hood_hash/: Hash.h
src/hashes/std_hash/: Hash.h
src/maps/: absl_flat_hash_map_cityhash.h  absl_flat_hash_map_default.h  absl_flat_hash_map_fnv1ahash.h  absl_flat_hash_map_nullhash.h  absl_flat_hash_map_robinhoodhash.h  absl_node_hash_map.h  absl_node_hash_map_cityhash.h  absl_node_hash_map_fnv1ahash.h  absl_node_hash_map_nullhash.h  absl_node_hash_map_robinhoodhash.h  absl_robin_hood_unordered_flat_map_abslhash.h  google_dense_hash_map.h  hashes.h  robin_hood_unordered_flat_map_cityhash.h  robin_hood_unordered_flat_map_fnv1ahash.h  robin_hood_unordered_flat_map_nullhash.h  robin_hood_unordered_flat_map_robinhoodhash.h  robin_hood_unordered_node_map.h  robin_hood_unordered_node_map_cityhash.h  robin_hood_unordered_node_map_fnv1ahash.h  robin_hood_unordered_node_map_nullhash.h  robin_hood_unordered_node_map_robinhoodhash.h  ska_bytell_hash_map.h  ska_bytell_hash_map_cityhash.h  ska_bytell_hash_map_fnv1ahash.h  ska_bytell_hash_map_nullhash.h  ska_bytell_hash_map_robinhoodhash.h  std_map.h  std_unordered_map_cityhash.h  std_unordered_map_fnv1ahash.h  std_unordered_map_nullhash.h  std_unordered_map_robinhoodhash.h  tsl_bhopscotch_fnv1ahash.h  tsl_bhopscotch_nullhash.h  tsl_bhopscotch_robinhoodhash.h  tsl_hopscotch_cityhash.h  tsl_hopscotch_fnv1ahash.h  tsl_hopscotch_nullhash.h  tsl_hopscotch_robinhoodhash.h  tsl_robin_cityhash.h  (+7 more)
src/maps/01_robin_hood_node_map/: map_defines.h
src/maps/02_robin_hood_flat_map/: map_defines.h
src/maps/03_absl_node_hash_map/: README.md  map_defines.h
src/maps/04_absl_flat_hash_map/: .gitignore  map_defines.h
src/maps/05_skarupke_flat_hash_map/: Makefile
src/maps/abseil_flat_hash_map/: Map.h  dependencies.cmake
src/maps/abseil_node_hash_map/: Map.h  dependencies.cmake
src/maps/absl_flat_hash_map/: README.md
src/maps/absl_node_hash_map/: Map.h
src/maps/ankerl_unordered_dense/: Map.h
src/maps/ankerl_unordered_dense_map/: Map.h
src/maps/ankerl_unordered_dense_segmented/: Map.h
src/maps/asteria-cow_hashmap/: Map.h
src/maps/boost_multiindex/: Map.h  dependencies.cmake
src/maps/boost_unordered_flat_map/: Map.h
src/maps/boost_unordered_flat_map_noSSE/: Map.h  dependencies.cmake
src/maps/boost_unordered_map/: Map.h  dependencies.cmake
src/maps/boost_unordered_map_pool/: Map.h
src/maps/boost_unordered_map_unsynchronized_pool_resource/: Map.h  dependencies.cmake
src/maps/boost_unordered_node_map/: Map.h
src/maps/eastl_hash_map/: Map.cpp  Map.h  dependencies.cmake
src/maps/folly_F14FastMap/: Map.h
src/maps/folly_F14NodeMap/: Map.h  dependencies.cmake
src/maps/folly_F14ValueMap/: Map.h
src/maps/fph_dynamic_map/: Map.h
src/maps/fph_meta_map/: Map.h
src/maps/google_dense_hash_map/: map_defines.h
src/maps/greg7mdp_btree_map/: Map.h
src/maps/greg7mdp_flat_hash_map/: Map.h
src/maps/greg7mdp_node_hash_map/: Map.h
src/maps/greg7mdp_parallel_flat_hash_map/: Map.h
src/maps/greg7mdp_parallel_node_hash_map/: Map.h
src/maps/greg7mdp_phmap_flat_hash_map/: Map.h
src/maps/greg7mdp_phmap_node_hash_map/: Map.h
src/maps/greg7mdp_phmap_parallel_flat_hash_map/: Map.h
src/maps/greg7mdp_phmap_parallel_node_hash_map/: Map.h
src/maps/greg7mdp_spp_sparse_hash_map/: Map.h
src/maps/jiwan_dense_hash_map/: Map.h
src/maps/ktprime/: Map.h  dependencies.cmake
src/maps/ktprime_hash_table7/: Map.h
src/maps/ktprime_hash_table8/: Map.h
src/maps/null_map/: map_defines.h
src/maps/rigtorp_HashMap/: Map.h
src/maps/robin_hood/: robin_hood.h
src/maps/robin_hood_flat_map/: map_defines.h
src/maps/robin_hood_map/: map_defines.h  robin_hood_map.h
src/maps/robin_hood_map2/: map_defines.h  robin_hood_map.h
src/maps/robin_hood_node_map/: map_defines.h
src/maps/robin_hood_unordered_flat_map/: Map.h
src/maps/robin_hood_unordered_map/: map_defines.h
src/maps/robin_hood_unordered_node_map/: Map.h
src/maps/ska_bytell_hash_map/: Map.h
src/maps/ska_flat_hash_map/: Map.h
src/maps/skarupke_flat_hash_map/: map_defines.h
src/maps/spp_sparse_hash_map/: Map.h
src/maps/std_map/: map_defines.h
src/maps/std_unordered_map/: Map.h  map_defines.h
src/maps/std_unordered_map_pool/: Map.h
src/maps/std_unordered_map_unsynchronized_pool_resource/: Map.h
src/maps/tessil_hopscotch_map/: Map.h
src/maps/tessil_robin_map/: Map.h
src/maps/tessil_sparse_map/: Map.h
src/maps/tsl/: Makefile
src/maps/tsl_hopscotch_map/: Map.h
src/maps/tsl_robin_map/: Map.h
src/maps/tsl_sparse_map/: Map.h
src/scripts/: analyze_bench_log.rb  bench.rb  generator.py  test_template.html.j2
(+11 files in other folders)
